# bilibili-summarizer

./: .gitignore  download_audio.py  flake.nix  generate_subtitles.py  main.py  pyproject.toml  read_prompt.py  summarize.py
prompt/: 化学.md  生物.md
